5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1577_1330.log
== TEST (2019-03-14 19:23:32) 
-- CODE:
print ( 41.6 )
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:23:33) 
-- CODE:
print ( 41.6 )
-- EXECUTION TIME:
0.134297
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:23:59) 
-- CODE:
print ( 41 )
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:00) 
-- CODE:
print ( 41 )
-- EXECUTION TIME:
0.152944
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:01) 
-- CODE:
print ( 41 )
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:03) 
-- CODE:
print ( 41 )
-- EXECUTION TIME:
0.185938
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:10) 
-- CODE:
print ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:12) 
-- CODE:
print ( 41,6 )
-- EXECUTION TIME:
0.199393
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:14) 
-- CODE:
print ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:15) 
-- CODE:
print ( 41,6 )
-- EXECUTION TIME:
0.224769
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:16) 
-- CODE:
print ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:16) 
-- CODE:
print ( 41,6 )
-- EXECUTION TIME:
0.148853
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:35) 
-- CODE:
round ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:37) 
-- CODE:
round ( 41,6 )
-- EXECUTION TIME:
0.173603
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:37) 
-- CODE:
round ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:38) 
-- CODE:
round ( 41,6 )
-- EXECUTION TIME:
0.146888
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:55) 
-- CODE:
print ( round 41,6 )
-- ERROR:
File "XXXX", line 1
    print ( round 41,6 )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:57) 
-- CODE:
print ( round 41,6 )
-- EXECUTION TIME:
0.29563
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print ( round 41,6 )
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:05) 
-- CODE:
print ( 41,6 ) round
-- ERROR:
File "XXXX", line 1
    print ( 41,6 ) round
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:05) 
-- CODE:
print ( 41,6 ) round
-- ERROR:
File "XXXX", line 1
    print ( 41,6 ) round
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:06) 
-- CODE:
print ( 41,6 ) round
-- EXECUTION TIME:
0.202255
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print ( 41,6 ) round
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:07) 
-- CODE:
print ( 41,6 ) round
-- ERROR:
File "XXXX", line 1
    print ( 41,6 ) round
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:07) 
-- CODE:
print ( 41,6 ) round
-- EXECUTION TIME:
0.126527
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print ( 41,6 ) round
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:25) 
-- CODE:
print (round ( 41,6 ) )  
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:26) 
-- CODE:
print (round ( 41,6 ) )  
-- EXECUTION TIME:
0.18199
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:27) 
-- CODE:
print (round ( 41,6 ) )  
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:27) 
-- CODE:
print (round ( 41,6 ) )  
-- EXECUTION TIME:
0.205455
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:51) 
-- CODE:
print ( 41 )   
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:52) 
-- CODE:
print ( 41 )   
-- EXECUTION TIME:
0.152964
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:52) 
-- CODE:
print ( 41 )   
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:53) 
-- CODE:
print ( 41 )   
-- EXECUTION TIME:
0.196429
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:54) 
-- CODE:
print ( 41 )   
-- EXECUTION TIME:
0.121368
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:26:02) 
-- CODE:
print ( 41 )   
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:13) 
-- CODE:
print ( 41 )   
-- EXECUTION TIME:
0.124761
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:44) 
-- CODE:
round ( 41.6 )   

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:59) 
-- CODE:
print ( 41.6 )   

-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:35) 
-- CODE:
print (round( 250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:27:41) 
-- CODE:
print (round( 250/6,2))

-- EXECUTION TIME:
0.151516
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
